--- a/index.html
+++ b/index.html
@@ -321,13 +321,60 @@
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="js-goto-next-question btn q-item-answer-items-btn">Sessiz</a>
-                                        <a href="javascript:;" data-value="2" class="js-goto-next-question btn q-item-answer-items-btn">Biraz Gürültülü</a>
-                                        <a href="javascript:;" data-value="3" class="js-goto-next-question btn q-item-answer-items-btn">Gürültülü</a>
+                                        <a href="javascript:;" data-value="2" class="js-goto-next-question btn q-item-answer-items-btn q-item-answer-items-btn--yellow">Biraz Gürültülü</a>
+                                        <a href="javascript:;" data-value="3" class="js-goto-next-question btn q-item-answer-items-btn q-item-answer-items-btn--red">Gürültülü</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
         
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section result fp-auto-height-responsive">
+            <div class="container">
+                <div class="row no-gutters d-flex justify-content-center align-items-start">
+                    <div class="col-lg-4 col-md-8 col-sm-12">
+                        <div class="result-inner">
+                            <h2 class="result-title">YANİ NASIL SÖYLESEM BİLEMİYORUM</h2>
+                            <p class="result-text">Makinenizin</p>
+                            <p class="result-text" id="machineAgeTxt">Bildiğiniz Yaşı : 2</p>
+                            <p class="result-text" id="machineRealAgeTxt">Gerçek Yaşı : 4</p>
+                            <div class="result-option">
+                                <div class="result-option-item">
+                                    <p class="result-option-item-text">
+                                        Makinenizi, her yıkamada, kir ve kireçten korumak için 10 TL Calgon indirimi kazandınız.
+                                    </p>
+                                    <div class="result-discount js-result-discount">
+                                        <p class="result-discount-code js-result-discount-code">CALGONFIRSAT</p>
+                                        <p class="result-discount-copy-text">KOPYALA</p>
+                                    </div>
+                                    <a href="https://www.hepsiburada.com/kampanyalar/calgon-urunleri?utm_source=coop&utm_medium=rbhy&utm_campaign=makineminomru&utm_content=discount&utm_term=6800&wt_cp=rbhy.discount.6800.makineminomru" target="_blank" class="btn result-get-discount-btn">SATIN AL</a>
+                                    <a href="javascript:;" class="result-term-of-use-btn js-result-term-of-use-btn" data-bs-toggle="modal" data-bs-target="#termOfUse">* Kullanım Koşulları</a>
+                                </div>
+
+                                <div class="result-option-item">
+                                    <p class="result-option-item-text">
+                                        Makinenizi daha uzun yıllar kullanabilmek için formu doldurun; %50 indirimli servis hizmeti alın! Hem bütçenizi hem de
+                                        doğayı koruyun!
+                                    </p>
+                                    <a href="javascript:;" class="btn js-get-service-discount-btn result-get-service-discount-btn">%50 SERVİS İNDİRİMİ AL</a>
+                                </div>
+
+                                <div class="result-option-item">
+                                    <p class="result-option-item-text">
+                                        Kirece ne gibi ek önlemler alabileceğinizi öğrenmek için <a href="https://kirecedikkat.et/" target="_blank">kirecedikkat.et</a> 'i ziyaret edin.
+                                    </p>
+                                    <div class="result-kde">
+                                        <a href="https://kirecedikkat.et/" target="_blank">
+                                            <img src="/assets/images/kde-logo.png" alt="kirecedikkat.et">
+                                        </a>
+                                        <a href="https://kirecedikkat.et/" target="_blank" class="btn result-kde-btn">Tıkla, Önlemini Al</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -416,6 +463,36 @@
                         etmesi gereken bilgiler KVKK’ya göre belirlenmiş olup ilgili açıklamalar formda yer almaktadır.</p>
                     <p>Veri Sorumlusu KVKK’da olabilecek değişiklikler ve Kişisel Verileri Koruma Kurulu tarafından belirlenecek yöntemler
                         ile verilecek kararlar sebebi ile bu aydınlatma bildiriminde değişiklik yapma hakkını saklı tutmaktadır.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- termOfUse modal -->
+    <div class="modal fade" id="termOfUse" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="aydinlatmaMetniLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="aydinlatmaMetniLabel">Kullanım Koşulları</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Bu kampanya Reckitt Benckiser Ev ve Hijyen Ürünleri A.Ş. tarafından 16 Eylül 2020 (00:01)- 31.12.2021 (23:59) tarihleri
+                        arasında düzenlenmektedir. Makineminomru.net internet sitesi üzerinden testini tamamlayan 18 yaşından büyük herkes bu
+                        kampanyaya katılım hakkına sahiptir. Testin sonucunda iletilecek indirim kuponu kampanya tarihleri arasında mobil
+                        ve/veya desktop üzerinden hepsiburada.com platformunda kullanılabilecektir. Söz konusu indirim kuponu sadece Calgon
+                        ürünlerinde geçerlidir. İndirim kuponun geçerli olduğu Calgon ürünlerinin detayları yönlendirme bağlantısında yer
+                        almaktadır. İndirim kuponu başka bir indirim kuponuyla ve kampanyayla birleştirilemez. Kazanılan ödül değiştirilemez,
+                        iade edilemez veya nakde dönüştürülemez. Kampanya kapsamında ortaya çıkan herhangi bir uyuşmazlıkta Reckitt Benckiser Ev
+                        ve Hijyen Ürünleri A.Ş.’nin her türlü kayıtları esas alınacaktır. Kampanyaya katılan herkes, kampanya şartlarını okuyup
+                        anlayarak peşinen kabul etmiş sayılır. Reckitt Benckiser Ev ve Hijyen Ürünleri A.Ş. bu koşullar ve kuralları
+                        gerektiğinde katılımcılarına önceden haber vermeksizin değiştirebilir. Koşullar ve kurallardaki değişiklikler tüm
+                        katılımcılar için bağlayıcı nitelik taşımaktadır. Bu nedenle katılımcılar, güncel koşullar ve kuralları öğrenmek için bu
+                        sayfayı düzenli olarak ziyaret etmeleri gerektiğini kabul ederler. Koşullar ve Kurallar'ın herhangi bir maddesi hukuka
+                        aykırı, hükümsüz ya da uygulanamaz olarak addedilirse söz konusu madde ayrılabilir olarak sayılacak ve geriye kalan
+                        hükümlerin geçerliliğini ve uygulanabilirliğini etkilemeyecektir.
+                    </p>
                 </div>
             </div>
         </div>
