go to slide fix

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                         Makinenizi daha uzun yıllar kullanabilmek için formu doldurun; %50 indirimli servis hizmeti alın! Hem bütçenizi hem de
                                         doğayı koruyun!
                                     </p>
-                                    <a href="javascript:;" class="btn js-get-service-discount-btn result-get-service-discount-btn">%50 SERVİS İNDİRİMİ AL</a>
+                                    <a href="javascript:;" class="btn js-goto-next-question js-get-service-discount-btn result-get-service-discount-btn">%50 SERVİS İNDİRİMİ AL</a>
                                 </div>
 
                                 <div class="result-option-item">
