--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Calgon | makineminomru.com</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-language" content="TR" />
+    
+    <title>Calgon – Makinemin Ömrü</title>
+    <meta name="description" content="Calgon ile makinenizin mevcut durumunu ve metabolik yaşını hesaplayın.">
+    <meta property="og:title" content="Calgon – Makinemin Ömrü Net" />
+    <meta property="og:description" content="Calgon ile makinenizin mevcut durumunu ve metabolik yaşını hesaplayın." />
+    <meta property="og:image:url" content="http://www.makineminomru.net/assets/images/share.jpg?v=1" />
+    <link rel="shortcut icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="dist/mo.min.css" />
 </head>
 
@@ -24,7 +30,7 @@
                             <div class="animate__animated animate__fadeInLeft welcome-left">
                                 <h1 class="welcome-title">Hoş geldiniz.</h1>
                                 <p class="welcome-text">
-                                    Makinenizin <strong>gerçek yaşını</strong> öğrenmek için soruları yanıtlayın.<br />
+                                    Makinenizin <strong>gerçek yaşını</strong> öğrenmek için soruları yanıtlayın.<br>
                                     Soruları sadece <strong>1 dakika</strong> içinde cevaplayın,
                                 </p>
                                 <h2 class="welcome-info">
@@ -49,7 +55,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">1</div>
-                                <h2 class="q-item-title">Hangi şehirde <br /> yaşıyorsunuz?</h2>
+                                <h2 class="q-item-title">Hangi şehirde <br> yaşıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <select name="Sehir" id="city-select">
                                         <option value="0">Lütfen yaşadığınız şehri seçin</option>
@@ -153,7 +159,7 @@
                             <img src="assets/images/q2-img@2x.png" alt="Calgon | makineminomru - Makineniz kaç yaşında?">
                             <div class="q-item q-item--right">
                                 <div class="q-item-order q-item-order--right">2</div>
-                                <h2 class="q-item-title">Çamaşır makineniz <br /> kaç yıllık?</h2>
+                                <h2 class="q-item-title">Çamaşır makineniz <br> kaç yıllık?</h2>
                                 <div class="q-item-answer">
                                     <select name="machine-age" id="machine-age-select">
                                         <option value="">Lütfen makine yaşını seçin</option>
@@ -184,7 +190,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">3</div>
-                                <h2 class="q-item-title">Çamaşır makinenizihaftada<br />kaç kez kullanıyorsunuz?</h2>
+                                <h2 class="q-item-title">Çamaşır makinenizihaftada <br> kaç kez kullanıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <select id="how-often-select">
                                         <option value="">Lütfen yıkama sayınızı seçin</option>
@@ -218,7 +224,7 @@
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
                             <div class="q-item">
                                 <div class="q-item-order q-item-order--right">4</div>
-                                <h2 class="q-item-title">Çamaşırlarınızı hangi tür<br />deterjan ile yıkıyorsunuz?</h2>
+                                <h2 class="q-item-title">Çamaşırlarınızı hangi tür<br>deterjan ile yıkıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="js-goto-next-question btn q-item-answer-items-btn">Sıvı</a>
@@ -241,7 +247,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">5</div>
-                                <h2 class="q-item-title">Çamaşırlarınızı yıkarken kir ve<br />
+                                <h2 class="q-item-title">Çamaşırlarınızı yıkarken kir ve<br>
                                 kireç önleyici kullanıyor musunuz?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
@@ -267,7 +273,7 @@
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
                             <div class="q-item">
                                 <div class="q-item-order q-item-order--right">6</div>
-                                <h2 class="q-item-title">Çamaşır makinenizin <br /> lastiğinin içi kirli mi?</h2>
+                                <h2 class="q-item-title">Çamaşır makinenizin <br> lastiğinin içi kirli mi?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="btn btn-lg js-goto-next-question q-item-answer-items-btn">Evet</a>
@@ -290,7 +296,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">7</div>
-                                <h2 class="q-item-title">Yıkama sonrası çamaşırlarınızın <br /> makineden kirli çıktığı oluyor mu?</h2>
+                                <h2 class="q-item-title">Yıkama sonrası çamaşırlarınızın <br> makineden kirli çıktığı oluyor mu?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1"
@@ -317,7 +323,7 @@
                             <img src="assets/images/q8-img.png" alt="Calgon | makineminomru - Çamaşır makineniz çalışırkenne kadar ses çıkarıyor?">
                             <div class="q-item">
                                 <div class="q-item-order q-item-order--right">8</div>
-                                <h2 class="q-item-title">Çamaşır makineniz çalışırken <br /> ne kadar ses çıkarıyor?</h2>
+                                <h2 class="q-item-title">Çamaşır makineniz çalışırken <br> ne kadar ses çıkarıyor?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="js-goto-next-question btn q-item-answer-items-btn">Sessiz</a>
