--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Calgon – Makinemin Ömrü Net" />
     <meta property="og:description" content="Calgon ile makinenizin mevcut durumunu ve metabolik yaşını hesaplayın." />
     <meta property="og:image:url" content="http://www.makineminomru.net/assets/images/share.jpg?v=1" />
-    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" href="/assets/images/favicon.png">
     <link rel="stylesheet" href="dist/mo.min.css" />
 </head>
 
@@ -23,9 +23,9 @@
             </a>
         </header>
         <div class="section welcome">
-            <div class="container">
+            <div class="container-lg container-md container-sm">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="welcome-inner">
                             <div class="animate__animated animate__fadeInLeft welcome-left">
                                 <h1 class="welcome-title">Hoş geldiniz.</h1>
@@ -51,7 +51,7 @@
         <div class="section q q1">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">1</div>
@@ -154,7 +154,7 @@
         <div class="section q q2">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner">
                             <img src="assets/images/q2-img@2x.png" alt="Calgon | makineminomru - Makineniz kaç yaşında?">
                             <div class="q-item q-item--right">
@@ -186,7 +186,7 @@
         <div class="section q q3">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">3</div>
@@ -218,7 +218,7 @@
         <div class="section q q4">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q4-img.png"
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
@@ -243,7 +243,7 @@
         <div class="section q q5">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">5</div>
@@ -267,7 +267,7 @@
         <div class="section q q6">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q6-img.png"
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
@@ -292,7 +292,7 @@
         <div class="section q q7">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">7</div>
@@ -318,7 +318,7 @@
         <div class="section q q8">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
-                    <div class="col-10">
+                    <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q8-img.png" alt="Calgon | makineminomru - Çamaşır makineniz çalışırkenne kadar ses çıkarıyor?">
                             <div class="q-item">
