--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <div class="section welcome">
             <div class="container-lg container-md container-sm">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters">
                     <div class="col-12">
                         <div class="welcome-inner">
                             <div class="animate__animated animate__fadeInLeft welcome-left">
@@ -50,7 +50,7 @@
         <!-- question 1 -->
         <div class="section q q1">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters q-row">
                     <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
@@ -153,7 +153,7 @@
         <!-- question 2 -->
         <div class="section q q2">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters">
                     <div class="col-12">
                         <div class="q-inner">
                             <img src="assets/images/q2-img@2x.png" alt="Calgon | makineminomru - Makineniz kaç yaşında?">
@@ -185,7 +185,7 @@
         <!-- question 3 -->
         <div class="section q q3">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
@@ -217,7 +217,7 @@
         <!-- question 4 -->
         <div class="section q q4">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q4-img.png"
@@ -242,7 +242,7 @@
         <!-- question 5 -->
         <div class="section q q5">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
@@ -266,7 +266,7 @@
         <!-- question 6 -->
         <div class="section q q6">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q6-img.png"
@@ -291,7 +291,7 @@
         <!-- question 7 -->
         <div class="section q q7">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner">
                             <div class="q-item q-item--left">
@@ -317,7 +317,7 @@
         <!-- question 8 -->
         <div class="section q q8">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center vh-100 align-items-end">
+                <div class="row no-gutters ">
                     <div class="col-12">
                         <div class="q-inner q-item--right">
                             <img src="assets/images/q8-img.png" alt="Calgon | makineminomru - Çamaşır makineniz çalışırkenne kadar ses çıkarıyor?">
