--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="TR" />
-    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calgon – Makinemin Ömrü</title>
     <meta name="description" content="Calgon ile makinenizin mevcut durumunu ve metabolik yaşını hesaplayın.">
     <meta property="og:title" content="Calgon – Makinemin Ömrü Net" />
