--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 </div>
             </div>
         </div>
-        <div class="section result fp-auto-height-responsive">
+        <div class="section result">
             <div class="container">
                 <div class="row no-gutters d-flex justify-content-center align-items-start">
                     <div class="col-lg-4 col-md-8 col-sm-12">
