--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
         </div>
         <div class="section result">
             <div class="container">
-                <div class="row no-gutters d-flex justify-content-center align-items-start">
-                    <div class="col-lg-4 col-md-8 col-sm-12">
+                <div class="row no-gutters">
+                    <div class="col-lg-5 col-md-8 col-sm-12">
                         <div class="result-inner">
                             <h2 class="result-title">YANİ NASIL SÖYLESEM BİLEMİYORUM</h2>
                             <p class="result-text">Makinenizin</p>
@@ -357,27 +357,34 @@
                                         <p class="result-discount-code js-result-discount-code">CALGONFIRSAT</p>
                                         <p class="result-discount-copy-text">KOPYALA</p>
                                     </div>
-                                    <a href="https://www.hepsiburada.com/kampanyalar/calgon-urunleri?utm_source=coop&utm_medium=rbhy&utm_campaign=makineminomru&utm_content=discount&utm_term=6800&wt_cp=rbhy.discount.6800.makineminomru" target="_blank" class="btn result-get-discount-btn">SATIN AL</a>
-                                    <a href="javascript:;" class="result-term-of-use-btn js-result-term-of-use-btn" data-bs-toggle="modal" data-bs-target="#termOfUse">* Kullanım Koşulları</a>
+                                    <a href="https://www.hepsiburada.com/kampanyalar/calgon-urunleri?utm_source=coop&utm_medium=rbhy&utm_campaign=makineminomru&utm_content=discount&utm_term=6800&wt_cp=rbhy.discount.6800.makineminomru"
+                                        target="_blank" class="btn result-get-discount-btn">SATIN AL</a>
+                                    <a href="javascript:;" class="result-term-of-use-btn js-result-term-of-use-btn"
+                                        data-bs-toggle="modal" data-bs-target="#termOfUse">* Kullanım Koşulları</a>
                                 </div>
-
+            
                                 <div class="result-option-item">
                                     <p class="result-option-item-text">
-                                        Makinenizi daha uzun yıllar kullanabilmek için formu doldurun; %50 indirimli servis hizmeti alın! Hem bütçenizi hem de
+                                        Makinenizi daha uzun yıllar kullanabilmek için formu doldurun; %50 indirimli servis hizmeti
+                                        alın! Hem bütçenizi hem de
                                         doğayı koruyun!
                                     </p>
-                                    <a href="javascript:;" class="btn js-goto-next-question js-get-service-discount-btn result-get-service-discount-btn">%50 SERVİS İNDİRİMİ AL</a>
+                                    <a href="javascript:;"
+                                        class="btn js-goto-next-question js-get-service-discount-btn result-get-service-discount-btn">%50
+                                        SERVİS İNDİRİMİ AL</a>
                                 </div>
-
+            
                                 <div class="result-option-item">
                                     <p class="result-option-item-text">
-                                        Kirece ne gibi ek önlemler alabileceğinizi öğrenmek için <a href="https://kirecedikkat.et/" target="_blank">kirecedikkat.et</a> 'i ziyaret edin.
+                                        Kirece ne gibi ek önlemler alabileceğinizi öğrenmek için <a href="https://kirecedikkat.et/"
+                                            target="_blank">kirecedikkat.et</a> 'i ziyaret edin.
                                     </p>
                                     <div class="result-kde">
                                         <a href="https://kirecedikkat.et/" target="_blank">
                                             <img src="/assets/images/kde-logo.png" alt="kirecedikkat.et">
                                         </a>
-                                        <a href="https://kirecedikkat.et/" target="_blank" class="btn result-kde-btn">Tıkla, Önlemini Al</a>
+                                        <a href="https://kirecedikkat.et/" target="_blank" class="btn result-kde-btn">Tıkla,
+                                            Önlemini Al</a>
                                     </div>
                                 </div>
                             </div>
