--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </div>
         <div class="section result">
             <div class="container">
-                <div class="row no-gutters">
+                <div class="row no-gutters d-flex justify-content-center align-items-center">
                     <div class="col-lg-5 col-md-8 col-sm-12">
                         <div class="result-inner">
                             <h2 class="result-title">YANİ NASIL SÖYLESEM BİLEMİYORUM</h2>
