--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                             <div class="animate__animated animate__fadeInLeft welcome-left">
                                 <h1 class="welcome-title">Hoş geldiniz.</h1>
                                 <p class="welcome-text">
-                                    Makinenizin <strong>gerçek yaşını</strong> öğrenmek için soruları yanıtlayın.<br>
-                                    Soruları sadece <strong>1 dakika</strong> içinde cevaplayın,
+                                    Makinenizin <strong>gerçek yaşını</strong> öğrenmek için soruları yanıtlayın. <br> Soruları sadece <strong>1 dakika</strong> içinde cevaplayın,
                                 </p>
                                 <h2 class="welcome-info">
                                     özel indirimleri ve fırsatları kaçırmayın.
@@ -191,7 +190,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">3</div>
-                                <h2 class="q-item-title">Çamaşır makinenizihaftada <br> kaç kez kullanıyorsunuz?</h2>
+                                <h2 class="q-item-title">Çamaşır makinenizi haftada <br> kaç kez kullanıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <select id="how-often-select">
                                         <option value="">Lütfen yıkama sayınızı seçin</option>
@@ -225,7 +224,7 @@
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
                             <div class="q-item">
                                 <div class="q-item-order q-item-order--right">4</div>
-                                <h2 class="q-item-title">Çamaşırlarınızı hangi tür<br>deterjan ile yıkıyorsunuz?</h2>
+                                <h2 class="q-item-title">Çamaşırlarnızı hangi tür <br> deterjan ile yıkıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="js-goto-next-question btn q-item-answer-items-btn">Sıvı</a>
@@ -248,8 +247,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">5</div>
-                                <h2 class="q-item-title">Çamaşırlarınızı yıkarken kir ve<br>
-                                kireç önleyici kullanıyor musunuz?</h2>
+                                <h2 class="q-item-title">Çamaşırlarınızı yıkarken kir ve <br> kireç önleyici kullanıyor musunuz?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" class="btn btn-lg js-goto-next-question q-item-answer-items-btn">Evet</a>
@@ -297,7 +295,7 @@
                         <div class="q-inner">
                             <div class="q-item q-item--left">
                                 <div class="q-item-order">7</div>
-                                <h2 class="q-item-title">Yıkama sonrası çamaşırlarınızın <br> makineden kirli çıktığı oluyor mu?</h2>
+                                <h2 class="q-item-title">Yıkama sonrası çamaşırlarınızın <br> makineden kirli çıktığı oluyor mu?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1"
