--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 alt="Calgon | makineminomru - Çamaşır makinenizi haftada kaç kez kullanıyorsunuz?">
                             <div class="q-item">
                                 <div class="q-item-order q-item-order--right">4</div>
-                                <h2 class="q-item-title">Çamaşırlarnızı hangi tür <br> deterjan ile yıkıyorsunuz?</h2>
+                                <h2 class="q-item-title">Çamaşırlarınızı hangi tür <br> deterjan ile yıkıyorsunuz?</h2>
                                 <div class="q-item-answer">
                                     <div class="q-item-answer-items">
                                         <a href="javascript:;" data-value="1" data-question="4" class="js-goto-next-question btn q-item-answer-items-btn">Sıvı</a>
