--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
         window.dataLayer = window.dataLayer || [];
     </script>
     <!-- End Google Tag Manager -->
-    
+    <!-- GA -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-177219365-1', 'auto');
+            ga('send', 'pageview');
+    </script>
+    <!-- GA -->
 </head>
 
 <body>
